@@ -1,3 +1,13 @@
+2003-03-21  Mikael Hallendal  <micke@codefactory.se>
+
+	* stickynotes_applet_callbacks.c:
+	- Use NULL instead of 0 for pointers.
+	(menu_preferences_cb): build fixes.
+	(menu_about_cb): build fixes
+
+	* stickynotes_applet.c (stickynotes_applet_fill): 
+	- Use NULL instead of 0 for pointers.
+
 2003-03-19  Loban A Rahman <loban@earthling.net>
 
     * stickynotes_applet_callbacks.h, stickynotes_applet_callbacks.c:
